# pelican-social-share

./: .gitignore  Makefile  README.md  STRUCTURE.md  TEMPLATE_TESTING.md  generate_sample.py  pyproject.toml  setup_dev.sh  test_sample.py
docs/: integration.md  requirements.md
examples/: example-article.md  pelicanconf.py  social_card.html  test_portrait.html
pelican_social_share/: __init__.py  cli.py  plugin.py
tests/: conftest.py  test_plugin.py
