[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pelican-social-share"
version = "0.1.0"
description = "A Pelican plugin that generates social share images using Playwright"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Ted Steinmann", email = "ted@tedsteinmann.me"}
]
keywords = ["pelican", "social", "og", "twitter", "cards", "playwright"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Content Management System",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pelican>=4.5.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/tedsteinmann/pelican-social-share"
Repository = "https://github.com/tedsteinmann/pelican-social-share"
Issues = "https://github.com/tedsteinmann/pelican-social-share/issues"

[tool.setuptools]
packages = ["pelican_social_share"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
